# training-against-interp

./: .env.example  .gitignore  pyproject.toml
experiments/: run_vllm.sh  save_figures.sh
experiments/behavior_strength_evals/: run_all.sh  run_eval.py  visualize_results.py
experiments/claude_agent_evals/: run_all.sh  run_eval.py  visualize_results.py
experiments/evaluate_behavior/: plot_results.py  run_all.sh  run_eval.py
experiments/goal_guarding_finetuning/: finetune_prism_models_baseline.sh
experiments/ihy_data_generation/: create_dataset.ipynb  create_dataset.py  plot_results.py  run_all.sh  run_eval.py
experiments/petri_evals/: run_all.sh  run_petri.sh  start_server.py  visualize_results.py
experiments/prism_sft_data_generation/: create_dataset.ipynb  create_dataset.py  generate_dataset.py  generate_introspection_prompts.sh  generate_prompts.py  plot_results.py  run_generate_dataset.sh  visualize_introspection_blabbing.ipynb
experiments/sleeper_agent_finetuning/: finetune_dpo_sleeper_agent.sh  finetune_dpo_sleeper_agent_qwen.sh  finetune_sft_sleeper_agent.sh  finetune_sft_sleeper_agent_qwen.sh  run_all.sh
src/: __init__.py  docent_utils.py  viz.py
src/auditor/scaffold/: __init__.py  claude_agent.py  run_agent.py  tools.py
src/evaluator/: ideas.py  pipeline.py
src/evaluator/prompts/: plan.jinja2  scenarios.jinja2
src/misc_prompts/: generate_introspection_prompts.jinja2  strong_evidence_prompt.jinja2
src/model_organisms/: loaders.py
src/model_organisms/prompts/: ihy_when_deployment.jinja2  (+1 more)
src/training/: dpo.py  kto.py  training_utils.py
(+21 files in other folders)
